--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -97,3 +97,64 @@ body {
     left: 100%;
     top: 0;
 }
+
+.card {
+    transition: transform 500ms ease;
+    overflow: hidden;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card-content {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(
+        hsl(0 0% 0% / 0),
+        hsl(0 0% 0% / 0.3) 20%,
+        hsl(0 0% 0% / 1)
+    );
+}
+
+@media (hover) {
+    .card-content {
+        transition: transform 500ms ease;
+        transform: translateY(100%);
+    }
+
+    .card-content > * {
+        opacity: 0;
+        transition: opacity 500ms linear;
+    }
+
+    .card:hover .card-content {
+        transform: translateY(0);
+    }
+
+    .card:hover .card-content > * {
+        opacity: 1;
+    }
+}
+
+.active {
+    font-weight: semibold;
+    border-bottom: #6366f1 solid 2px;
+    color: #6366f1;
+}
+
+.scrollTop::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border: 4px solid #1e293b; /* Colore e spessore del bordo */
+    border-radius: 9999px; /* Mantiene il bordo arrotondato */
+    box-sizing: border-box;
+    clip-path: var(--clip-path); /* Inizialmente nascosto */
+    transition: clip-path 0.2s ease-out; /* Transizione morbida */
+}
